# check-yamlschema

./: .pre-commit-hooks.yaml  pyproject.toml
src/check_yamlschema/: __init__.py  __main__.py
src/check_yamlschema/cli/: __init__.py  main_command.py
